PLANET-2049 - Fix navbar spacing on Desktop

--- a/assets/scss/modules/_buttons.scss
+++ b/assets/scss/modules/_buttons.scss
@@ -122,7 +122,10 @@ Stylesheet: Button Styles
   background-color: $aquamarine;
   color: $grey;
   font-size: rem(16);
-  line-height: 1.6;
+  line-height: 1.65;
+  width: 180px;
+  margin: 0;
+  padding: 2px 30px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
   transition: color background-color font-weight 100ms;
 
